# smsgw-client-python

./: .gitignore  .travis.yml  CITATION.cff  LICENSE  README.md  examples_1.py  examples_2.py  examples_3.py  examples_4.py  itcsmsgwclient.sln  puzzel_sms_gateway_client.code-workspace  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  publish.yml
docs/: 00-README.md  01-uv-setup.md  02-getting-started.md  03-quick-reference.md  04-examples.md  05-models.md  06-advanced.md  07-testing.md  08-publishing.md
docs/examples/: README.md  example_advanced.py  example_basic.py  example_batch_management.py  example_multiple_recipients.py
itcsmsgwclient/: itcsmsgw.py  itcsmsgwclient.pyproj  itcsmsgwclienttest.py  itcsmsgwtest.py
puzzel_sms_gateway_client/: schemas.py
src/: kiota-lock.json  mt_http_client.py
src/gw/: gw_request_builder.py
src/gw/rs/: rs_request_builder.py
src/gw/rs/send_messages/: send_messages_request_builder.py
src/management/: management_request_builder.py
src/management/item/: with_service_item_request_builder.py
src/management/item/batch/: batch_request_builder.py
src/management/item/batch/item/: with_client_batch_reference_item_request_builder.py
src/models/: batch_list_response.py  batch_response.py  batch_single_response.py  gas_settings.py  gateway_request.py  gateway_response.py  message.py  message_status.py  originator_settings.py  originator_type.py  parameter.py  send_window.py  settings.py  stop_batch_response.py  stopped_message_response.py
tests/unit/: conftest.py  test_client.py  test_models.py  test_puzzel_sms_gateway_client.py  test_request_builders.py  test_schemas.py
